overflow fix

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -27,7 +27,7 @@ body {
 
 .custom-container {
   flex: 1;
-  overflow: auto;
+  // overflow: auto;
   max-width: 900px;
   width: 100%; /* Adjust max-width as needed */
   margin: 0 auto; /* Center the container */
@@ -122,7 +122,6 @@ body {
 
 .footer-container {
   text-align: center;
-  margin-top: auto
 }
 
 .footer-icons {
